# lms_project

./: .env.example  .gitignore  README.md  celerybeat-schedule  pyproject.toml
config/: celery.py  settings.py  urls.py
materials/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
materials/fixtures/: courses.json  lessons.json
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_course_subscribers_course_updated_at.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: payments.json  users.json
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_user_first_name_alter_user_last_name.py  0004_payment_payment_link_payment_stripe_price_id_and_more.py
